<resources>

    <string name="app_name">Fit4Life</string>
    <string name="loginfoto">foto for opvulling login scherm</string>
    <string name="login_input_email">email:</string>
    <string name="login_input_password">password:</string>
    <string name="login_submit_button">Login</string>
    <string name="version">version: 0.1.6</string>
    <string name="submit">submit</string>

    <string name="system_error">a error occurred something went wrong</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="toolbar_disc_nav">for nav bar</string>
    <string name="toolbar_txt_nav">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="Nav_txt_food">Food</string>
    <string name="Nav_txt_tasks">Tasks</string>
    <string name="Nav_txt_progress">Progress</string>
    <string name="Nav_txt_Home">Home</string>
    <!--
    fr = fragment,
    fd = food,
    -->
    <string name="Food_btn_burn">Callories Burnt</string>
    <string name="Food_btn_eat">Callories eaten</string>
    <string name="placeholdernav">nothing</string>
    <string name="disc_fraq_food_eat_img">imagedisc</string>
    <string name="label_fr_fd_eat_product_name">Product:</string>
    <string name="label_fr_fd_eat_merk">merk:</string>
    <string name="label_fr_fd_eat_cal_100gr">calorien per 100 gram:</string>
    <string name="label_fr_fd_eat_gram">gram : (van uw gerecht)</string>




</resources>

