<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="149dp" app:srcCompat="@android:color/holo_red_dark"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/disc_fraq_food_eat_img"/>
    <AutoCompleteTextView
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:id="@+id/productautocomplete"
            android:hint="@string/label_fr_fd_eat_product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/product_tv" app:layout_constraintHorizontal_bias="0.496"/>

    <TextView
            android:text="@string/label_fr_fd_eat_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_tv" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" tools:labelFor="@+id/productautocomplete"/>
    <EditText
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/label_fr_fd_eat_merk"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/merk_et"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="332dp"
    />
    <TextView
            android:text="@string/label_fr_fd_eat_merk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/merk_tv" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/productautocomplete"
            app:layout_constraintHorizontal_bias="0.214" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/merk_et"/>
    <EditText
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/label_fr_fd_eat_cal_100gr"
            android:ems="10"
            android:id="@+id/cal_100gr" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cal_100gr_tv" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <EditText
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/label_fr_fd_eat_gram"
            android:ems="10"
            android:id="@+id/amount_gram" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button" android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cal_100gr_tv" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/merk_et" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.214"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/cal_100gr" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.214"/>
</androidx.constraintlayout.ConstraintLayout>