<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.MainActivity">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:id="@+id/tool"
            app:contentInsetLeft="0dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            android:layout_height="66dp">
    </android.support.v7.widget.Toolbar>
    <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp" app:srcCompat="@color/colorPrimaryDark"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="379dp"
            android:contentDescription="@string/loginfoto"
            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.73"/>
    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password" android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="108dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.505" android:hint=""/>
    <TextView
            android:text="@string/login_input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_textview" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/login_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.141"/>
    <TextView
            android:text="@string/login_input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pass_textview" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.151" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/login_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email" app:layout_constraintVertical_bias="0.947"/>
    <Button
            android:text="@string/login_submit_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/Login_main" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.566"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Login_main" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="10sp" app:layout_constraintHorizontal_bias="0.501"/>

</androidx.constraintlayout.ConstraintLayout>